--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,15 @@ pydantic = ">=1.9.0<2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+pytest-coverage = "^0.0"
+isort = "^5.10.1"
+mypy = "^0.971"
+flake8 = "^5.0.4"
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+line_length = 115
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
