--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,12 @@ pytest-coverage = "^0.0"
 isort = "^5.10.1"
 mypy = "^0.971"
 flake8 = "^5.0.4"
+flake8-builtins = "^1.5.3"
+flake8-annotations = "^2.9.1"
+flake8-commas = "^2.1.0"
+flake8-isort = "^4.2.0"
+flake8-print = "^5.0.0"
+flake8-debugger = "^4.1.2"
 
 [tool.isort]
 multi_line_output = 3
