--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-pydantic = ">=1.9.0<2.0.0"
+pydantic = ">=1.9.0,<2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
