--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ pydantic = ">=1.9.0,<2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
-pytest-coverage = "^0.0"
 isort = "^5.10.1"
 mypy = "^0.971"
 flake8 = "^5.0.4"
@@ -23,6 +22,7 @@ flake8-commas = "^2.1.0"
 flake8-isort = "^4.2.0"
 flake8-print = "^5.0.0"
 flake8-debugger = "^4.1.2"
+pytest-cov = "^3.0.0"
 
 [tool.isort]
 multi_line_output = 3
