--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/team23/pydantic-partial"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.9"
 pydantic = ">=1.9.0,<2.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -23,6 +23,7 @@ flake8-isort = "^4.2.0"
 flake8-print = "^5.0.0"
 flake8-debugger = "^4.1.2"
 pytest-cov = "^3.0.0"
+tox = "^3.26.0"
 
 [tool.isort]
 multi_line_output = 3
