--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,14 @@ repository = "https://github.com/team23/pydantic-partial"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-pydantic = ">=1.9.0,<2.0.0"
+python = "^3.8"
+pydantic = ">=1.9.0,<2.1.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.2"
+pytest = ">=7.1.2,<8.0.0"
 isort = "^5.10.1"
-mypy = ">=0.971,<1.2"
-flake8 = "^5.0.4"
+mypy = ">=0.971,<2.0"
+flake8 = ">=5.0.4,<7.0.0"
 flake8-builtins = ">=1.5.3,<3.0.0"
 flake8-annotations = ">=2.9.1,<4.0.0"
 flake8-commas = "^2.1.0"
