--- a/.github/workflows/tox-pytest.yml
+++ b/.github/workflows/tox-pytest.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -18,4 +18,4 @@ jobs:
           poetry install
       - name: Test with pytest
         run: |
-          poetry run tox -e 'py-1.9,py-1.10'
+          poetry run tox -e 'py-1.9,py-1.10,py-2.0'
