--- a/.github/workflows/flake8-mypy.yml
+++ b/.github/workflows/flake8-mypy.yml
@@ -15,5 +15,5 @@ jobs:
           poetry install
       - name: Lint with flake8
         run: |
-          poetry run flake8 .
-          poetry run mypy .
+          poetry run flake8 pydantic_partial tests
+          poetry run mypy pydantic_partial
