--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
 isolated_build = True
 envlist =
-    py39-{1.9,1.10,2.0},
-    py310-{1.9,1.10,2.0},
-    py311-{1.9,1.10,2.0}
+    py39-{1.9,1.10,2.x},
+    py310-{1.9,1.10,2.x},
+    py311-{1.9,1.10,2.x}
 
 [testenv]
 deps =
     pytest
     1.9: pydantic>=1.9,<1.10
     1.10: pydantic>=1.10,<1.11
-    2.0: pydantic>=2.0,<2.1
+    2.x: pydantic>=2.0,<3.0
 commands = pytest
