--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           python -m pip install --upgrade poetry
           poetry install
-      - name: Lint with flake8
+      - name: Lint with ruff & mypy
         run: |
-          poetry run flake8 pydantic_partial tests
+          poetry run ruff check pydantic_partial tests
           poetry run mypy pydantic_partial
