--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: "LINT: Run flake8 & mypy"
 on: [push, pull_request]
 jobs:
-  flake8-and-mypy:
+  linting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
