--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","
 line-length = 115
 target-version = "py39"
 ignore = ["A001","A002","A003","ANN101","ANN102","ANN401","C901","N8","B008","F405","F821"]
+output-format = "grouped"
 
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
