--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: "LINT: Run ruff & mypy"
+name: "LINT: Run ruff & pyright"
 on:
   push:
   pull_request:
@@ -17,7 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade poetry
           poetry install
-      - name: Lint with ruff & mypy
+      - name: Lint with ruff & pyright
         run: |
           poetry run ruff check pydantic_partial tests
-          poetry run mypy pydantic_partial
+          poetry run pyright pydantic_partial
