--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ pytest-cov = ">=3,<7"
 tox = ">=3.26,<5.0"
 ruff = ">=0.5.0,<0.13.0"
 pyright = ">=1.1.350,<1.2"
+fastapi = "^0.116.0"  # just for testing the compatibilty
+anyio = "^4.9.0"
+httpx = "^0.28.1"
+trio = "^0.30.0"
 
 [tool.ruff]
 line-length = 115
